K8's/todo-app-ingress.yaml
# traefik-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: localhost  # You can change this to your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      # API routes for internal communication through ingress
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 4000
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 5000
      - path: /api/deadlines
        pathType: Prefix
        backend:
          service:
            name: deadline-service
            port:
              number: 6001
